--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <div id="title">
-    <h1>Hello World!<h1>
-  </div>
+  <head>
+    <link href="./style.css" type="text/css" rel="stylesheet">
+    <title>nurd's Website Thing</title>
+  </head>
+  
+  <body>
+    <h1>Hello World!</h1>
+  </body>
 </html>
