--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   
   <body>
-    <h1>Hello World!</h1>
+    <div id="title">
+      <h1>Hello World!</h1>
+    </div>
   </body>
 </html>
